# FIAP-DL-Assistente-Virtual

./: LICENSE  README.md  pyproject.toml
fiap_dl_assistente_virtual/: functions.py  main.py
tests/: test_fiap_dl_assistente_virtual.py
