[tool.poetry]
name = "FIAP_DL_ASSISTENTE_VIRTUAL"
version = "0.1.0"
description = ""
authors = ["Daniele Beltrão"]

[tool.poetry.dependencies]
python = "3.6"
PyAudio = "^0.2.11"
bs4 = "^0.0.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
